# toma

./: .gitignore  CASCSystemDesciption.html  CES.hs  CP.hs  Derivation.hs  E.hs  ES.hs  GWPO.hs  INFParser.hs  INFProblem.hs  Join.hs  KBCompletion.hs  LICENSE.txt  LPO.hs  LPOEncoding.hs  Main.hs  Makefile  MapUtil.hs  PE.hs  PES.hs  ParserTerm.hs  Prover.hs  README.md  ReductionOrder.hs  Rewriting.hs  SMT.hs  SMTParser.hs  SplitIf.hs  Substitution.hs  TPTP.hs  TRS.hs  TRSParser.hs  Term.hs  Termination.hs  UEQParser.hs  Util.hs  Z3.hs  perf.sh  stack.yaml  test.sh  (+2 more)
casc2022/: README
casc2023/: README
coco2022/: README
coco2022/Toma0.2/: starexec_description.txt
coco2023/: README
examples/: 917.trs  936.trs  AG01#3.17.trs  AGT042-10.p  ALG006-1.p  ALG235-1.p  BOO001-1-env-test.p  BOO001-1.p  Bor4.1.10.trs  CiME_04_append.trs  Der95_20.trs  I.p  LCL292-10.p  PUZ054-10.p  PUZ054-10_eq.p  SWB004-10.p  U.p  U.trs  U_lemma.p  ack.trs  add.p  add2.p  add_on_z.p  com.trs  com_sat.p  compare_leaves.trs  devie_ex8.12.trs  double_app.trs  evenodd.trs  fgf.trs  fgh.trs  hoge.p  kamereon.trs  klein.trs  list_rev.trs  non-terminating.trs  perm_list.trs  qsort.trs  rev_list_sat.p  rev_list_unsat2.p  (+13 more)
examples/div/: division.trs  division_rev.trs  division_rev2.trs  roundup_division.ax  roundup_division_100_10_10.p  roundup_division_100_2_50.p  roundup_division_16_4_4.p  roundup_division_200_2_100.p  roundup_division_20_2_10.p  roundup_division_25_5_5.p  roundup_division_36_6_6.p  roundup_division_40_2_20.p  roundup_division_49_7_7.p  (+7 more)
scripts/: MkExample.hs
(+29 files in other folders)
